--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.44.0",
+    "scss": "^0.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
